# integration-integrador_ava

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  GEMINI.md  LICENSE  LICENSE.md  README.md  SECURITY.md  codecov.yml  docker-compose.integration.yml  mkdocs.yml  pyproject.toml  requests.http  requirements-build.txt  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: deploy-test.yml  deploy.yml  docker-deploy.yml  docs.yml  mkdocs.yml  publish.yml  qa.yml
docs/: CSRF_MONITORING.md  DASHBOARD_ATIVACAO.md  DASHBOARD_PROPOSAL.md  MOODLE_HTTP_MOCK.md  apresentacoes.md  coverage-analysis.md  index.md  index.rst
docs/admin/: index.md
docs/layouts/: slide_template.html
docs/model/: index.md
docs/sga2tool_sga/: index.md
docs/stylesheets/: extra.css
docs/suap2local_suap/: index.md
docs/suap2tool_sga/: index.md
docs/tests/: base.md  coorte.md  health.md  index.md  integrador.md  integration.md  moodle_mock.md  security.md  settings.md
example/: data.json
helm/: values.yaml
helm/templates/: configmap.yaml  deployment.yaml  external-secret.yaml
scripts/: check_coverage_gate.py
src/: .coverage-baseline  .coveragerc  boot.py  check_coverage_gate.py  django-entrypoint.sh  dsgovbr  gunicorn.conf.py  locust.py  manage.py  pytest.ini  test_csrf_monitoring.py  urls.py  wsgi.py
src/base/: admin.py  apps.py  middleware.py  models.py  tests.py
src/cohort/: admin.py  apps.py  examples.py  models.py  tests.py
tests_integration/: conftest.py  docker-compose.integration.yml  test_suap2local_suap.py
(+166 files in other folders)
